# bombus

./: README.md  bot.py  pyproject.toml
bombus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
