[project]
name = "bombus"
version = "0.1.0"
description = "A discord bot for naturalists providing a subset of Dronefly features"
requires-python = ">=3.11"
dependencies = [
    "dronefly-discord @ file:///home/synrg/work/dronefly-discord",
    "dronefly-core @ file:///home/synrg/work/dronefly-core",
    "requests==2.32.5",
    "requests-cache==1.2.1",
    "requests-ratelimiter==0.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
